mailbox group report
